--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,12 @@
     "/demo/"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.0.0"
+    "polymer": "Polymer/polymer#^1.0.0",
+    "paper-input": "PolymerElements/paper-input#~1.1.5",
+    "paper-button": "PolymerElements/paper-button#~1.0.11",
+    "paper-checkbox": "PolymerElements/paper-checkbox#~1.1.0",
+    "paper-styles": "PolymerElements/paper-styles#~1.1.3",
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#~1.0.14"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
